[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "comfyui-credit-tracker"
version = "0.1.0"
description = "Pre-flight cost estimator for ComfyUI Partner Nodes (ShowText display)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[tool.setuptools.packages.find]
where = ["."]
include = ["custom_nodes*"]

[project.entry-points."comfyui.custom_node"]
credit_tracker = "custom_nodes.credit_tracker"
