[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui-credit-tracker"
version = "0.2.0"
description = "Pre-flight cost estimator with live balance check for ComfyUI Partner Nodes"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Av007" }]
urls = { Homepage = "https://github.com/Av007/custom_fns" }

[tool.setuptools.packages.find]
where = ["."]
include = ["custom_nodes*"]

[project.entry-points."comfyui.custom_node"]
credit_tracker = "custom_nodes.credit_tracker"
